fixed spacing on profile cards

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -224,6 +224,7 @@ button:hover, a:hover {
 
 .profile-card {
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+    border-radius:5px;
 }
 
 /* Some left and right padding inside the container */
